# PO-checker-app

./: .gitignore  AGENTS.md  README.md  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: build-desktop.yml
examples/: example_input.xlsx
scripts/: build_desktop.py  create_example_input.py  desktop_entry.py
src/po_label_app/: __init__.py  __main__.py  automation.py  config.py  excel_io.py  models.py  paths.py  run_context.py  tracking.py  ui.py  worker.py
tests/: test_excel_tracking.py
