[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "po-label-app"
version = "0.1.0"
description = "Local desktop Playwright automation app for vendor portal label requests"
requires-python = ">=3.10"
dependencies = [
    "openpyxl==3.1.5",
    "playwright==1.52.0",
    "PyYAML==6.0.2",
]

[project.scripts]
po-label-app = "po_label_app.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
